# Software-Engineering-Bible

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-CODE  LICENSE-CONTENT  PROJECT_CONTEXT.md  README.md  ROADMAP.md
.github/: pull_request_template.md
.obsidian/: app.json  (+1 more)
03-Python/code/: README.md  pyproject.toml
03-Python/code/seb_python/: __init__.py  asyncio_lite.py  concurrency.py  context.py  descriptors.py  exceptions.py  gc_sim.py  imports.py  iterators.py  logging_ctx.py  mro.py  plugins.py  vm.py
03-Python/code/tests/: test_labs.py
04-Data-Structures/code/python/: pyproject.toml
04-Data-Structures/code/python/seb_ds/: __init__.py  avl.py  binary_heap.py  bitset.py  bloom_filter.py  bounded_concurrent_queue.py  bst.py  deque_ds.py  doubly_linked_list.py  dynamic_array.py  errors.py  graph.py  hash.py  hash_map.py  hash_set.py  indexed_heap.py  linear_queue.py  lru_cache.py  mutex_map.py  persistent_stack.py  radix_tree.py  ring_buffer.py  singly_linked_list.py  stack.py  trie.py  union_find.py  vector_runner.py
04-Data-Structures/code/python/tests/: test_vectors.py
05-Algorithms/code/python/: pyproject.toml
05-Algorithms/code/python/seb_alg/: __init__.py  bellman_ford.py  bfs.py  binary_search.py  bipartite.py  bipartite_matching.py  bridges.py  certificates.py  components.py  cycle.py  dfs.py  dijkstra.py  dp.py  errors.py  floyd_warshall.py  graph_common.py  huffman.py  interval_scheduling.py  kmp.py  kruskal.py  max_flow.py  prim.py  quickselect.py  rabin_karp.py  reservoir_sample.py  rng.py  scc.py  sorts.py  topological_sort.py  vector_runner.py  z_algorithm.py  zero_one_bfs.py
05-Algorithms/code/python/tests/: test_vectors.py
(+1637 files in other folders)
