[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seb-python"
version = "0.1.0"
description = "Software Engineering Bible — Python mechanism labs"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["seb_python*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
