[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seb-alg"
version = "1.0.0"
description = "Python half of the paired Algorithms labs for the Software Engineering Bible."
requires-python = ">=3.9"
license = { text = "MIT" }
readme = { text = "See ../README.md", content-type = "text/markdown" }

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["seb_alg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
